test/tests/stages/14_pointers/invalid_types/compare_mixed_pointer_types.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstULong: 
                        TULong: 0
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: y
                  CSingleInit: 
                    CConstant: 
                      CConstULong: 
                        TULong: 0
                      None: 
                    None: 
                  Pointer: 
                    UInt: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
